Cleaned up configuration management, settings and runtime processing options. Note that command-line options have changed slightly (this is the last time, promise).
git-svn-id: file:///home/dweiss/carrot2/migration/carrot2.svn/trunk/carrot2@1714 7ff1d41c-760d-0410-a7ff-a3a56f310b35